# book-library-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
configs/: config.ini
data/: books.json
src/: __main__.py
src/application/book/: dto.py  exceptions.py  service.py
src/application/book/interfaces/: __init__.py  repository.py
src/application/common/: exceptions.py  pagination.py
src/cli/: main.py
src/config/: config.py
src/domain/book/: entity.py  exceptions.py  vo.py
src/domain/common/: exceptions.py
src/infrastructure/: config_loader.py
src/infrastructure/db/json/: __init__.py  filter.py  provider.py  schema.py  storage.py  utils.py
src/presentation/cli/: cli.py  main.py
tests/mocks/: json_io_provider.py
tests/unit/json_storage/: test_filter.py  test_schema.py  test_storage.py  test_utils.py
